@@ -1,3 +1,4 @@
+1/20/14 zoom buttons for linear graph
 1/20/14 robust implementation for vertical alignment of graph and pH scales
 1/20/14 add options.range to PHScaleNode
 1/19/14 reorganize CustomGraphNode so that order of instantiation in constructor matches order of appearance
